--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <h3>КАПУЧИНО</h3>
                             <p>Состав:<br>
                                 эспрессо,
-                                молоко</p>
+                                молоко.</p>
                             <span>169(250мл)<br>189с(400мл)</span>
                         </div>
                     </div>
@@ -84,7 +84,7 @@
                             <h3>АМЕРИКАНО</h3>
                             <p>Состав:<br></p>
                                 эспрессо,
-                                вода</p>
+                                вода.</p>
                             <span>149с(150мл)<br>169с(300мл)</span>
                         </div>
                     </div>
@@ -114,7 +114,7 @@
                             <p>Состав:<br>
                                 эспрессо,
                                 молоко,
-                                какао,
+                                какао.
                             </p>
                             <span>189с(350мл)</span>
                         </div>
@@ -146,7 +146,7 @@
                             <h3>ЛАТТЕ</h3>
                             <p>Состав:<br>
                                 эспрессо,
-                                молоко</p>
+                                молоко.</p>
                             <span>179с(350мл)</span>
                         </div>
                     </div>
@@ -161,7 +161,7 @@
                             <h3>ФЛЭТ УАЙТ</h3>
                             <p>Состав:<br>
                                 Двойной эспрессо,
-                                молоко</p>
+                                молоко.</p>
                             <span>179с(300мл)</span>
                         </div>
                     </div>
@@ -179,7 +179,7 @@
                                 лёд,
                                 <br>
                                 карамельный сироп,
-                                эспрессо</p>
+                                эспрессо.</p>
                             <span>229с(300мл)</span>
                         </div>
                     </div>
@@ -193,7 +193,7 @@
                         <div class="info">
                             <h3>КОФЕ НА АЛЬТЕРНАТИВНОМ<br>МОЛОКЕ
                             </h3>
-                            <p>Состав:<br>(Миндальное,кокосовое) молоко,<br>эспрессо</p>
+                            <p>Состав:<br>(Миндальное,кокосовое) молоко,<br>эспрессо.</p>
                             <span>199с(250мл)<br>239с(400мл)</span>
                         </div>
                     </div>
@@ -207,7 +207,7 @@
                         <div class="info">
                             <h3>КАКАО
                             </h3>
-                            <p>Состав:<br>Какао смесь,молоко</p>
+                            <p>Состав:<br>Какао смесь,молоко.</p>
                             <span>149с(250мл)<br>169(350мл)</span>
                         </div>
                     </div>
@@ -223,7 +223,7 @@
                             </h3>
                             <p>Состав:<br>
                                 Какао смесь,
-                                молоко</p>
+                                молоко.</p>
                             <span>159с(250мл)<br>179с(400мл)</span>
                         </div>
                     </div>
@@ -249,7 +249,7 @@
                                     </div>
                                     <div class="info">
                                         <h3>ЧИЗКЕЙК КЛАССИЧЕСКИЙ</h3>
-                                        <p>Состав:<br>Творожный сыр,молоко,<br>масло сливочное,мука пшеничная</p>
+                                        <p>Состав:<br>Творожный сыр,молоко,<br>масло сливочное,мука пшеничная.</p>
                                         <span>169с</span>
                                     </div>
                                 </div>
@@ -261,7 +261,7 @@
                                     </div>
                                     <div class="info">
                                         <h3>КРУАССАН</h3>
-                                        <p>(Сыр,клубника,шоколад,сгущенка)<br>Состав:<br>мука пшеничная, масло сливочное</p>
+                                        <p>(Сыр,клубника,шоколад,сгущенка)<br>Состав:<br>мука пшеничная, масло сливочное.</p>
                                         </p>
                                         <span>135с</span>
                                     </div>
