--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
                     <input type="submit" id="submit" value="Оставить заявку">
-                    <p>Ваш заявка принимается мгновенно и повтора не требует</p>
+                    <p>Ваша заявка принимается мгновенно и повтора не требует</p>
                 </form>
             </div>
             <div class="row">
@@ -71,7 +71,7 @@
                             <p>Состав:<br>
                                 эспрессо,
                                 молоко.</p>
-                            <span>169(250мл)<br>189с(400мл)</span>
+                            <span>169с(250мл)<br>189с(400мл)</span>
                         </div>
                     </div>
                 </div>
